fixing touch on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -657,18 +657,6 @@ p, small, span, div, button, input, textarea {
 }
 
 /* Clickable text treatment (app + map popups) */
-.entry-title-link,
-.popup-entry-option,
-.esri-popup__button,
-.esri-popup__action,
-.esri-popup__action-text {
-    text-shadow:
-        -0.5px -0.5px 0 #5b3a29,
-         0.5px -0.5px 0 #5b3a29,
-        -0.5px  0.5px 0 #5b3a29,
-         0.5px  0.5px 0 #5b3a29;
-}
-
 .entry-title-link:hover,
 .popup-entry-option:hover,
 .esri-popup__button:hover,
@@ -679,6 +667,11 @@ p, small, span, div, button, input, textarea {
 .esri-popup__button:focus-visible,
 .esri-popup__action:focus-visible,
 .esri-popup__action-text:focus-visible {
+    text-shadow:
+        -0.5px -0.5px 0 #5b3a29,
+         0.5px -0.5px 0 #5b3a29,
+        -0.5px  0.5px 0 #5b3a29,
+         0.5px  0.5px 0 #5b3a29;
     text-decoration: underline;
     text-underline-offset: 2px;
 }
